minor design updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Waltzar &ndash; Devblog</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="assets/images/w.png">
+    <link rel="icon" type="image/png" href="assets/images/waltzar.png">
     <script src="https://kit.fontawesome.com/acc4888f05.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -100,17 +100,17 @@
                 <h3>A Comprehensive Guide to Modern Full Stack Web Development 2024</h3>
             </div>
 
-            <p>A developer's wiki blog on the latest and fundamental web development technologies curated by <a href="">Miyuki Connelly</a>, an experienced self-taught web developer based in New York, the United States.</p>
+            <p>A developer's wiki blog on the latest and fundamental web development technologies curated by <a href="">Miyuki Connelly (U)</a>, an experienced self-taught web developer based in New York, the United States.</p>
 
             <!-- <p>A comprehensive developer wiki on fundamental and the latest web technologies curated by a self-taught web developer for aspiring developers and those who want to stay up to date with the ever-changing web technologies.</p> -->
 
             <hr>
 
-            <div class="additional-notes">
+            <div class="content-curator-notes">
 
-                <h4>Additional Notes</h4>
+                <h4>Content Curator's Notes</h4>
 
-                <ul class="additional-note-list">
+                <ul class="content-curator-list">
                     <li>
                         <p>This dev blog is curated for self-education and educational purpose. If you have any questions, suggestions or concerns on any parts of the blog, please reach out to <a href="mailto:admin@waltzar.com"><i class="fa-regular fa-envelope"></i>admin@waltzar.com</a>.</p>
                     </li>
@@ -118,7 +118,7 @@
                         <p>Sources are credited in each post. If you find any mistaken placements or omissions of sources, please let me know at <a href="mailto:credits@waltzar.com"><i class="fa-regular fa-envelope"></i>credits@waltzar.com</a>.</p>
                     </li>
                     <li>
-                        <p>This dev blog is available on a public GitHub repo: <a href="http://github.com/miyukiconnelly/waltzar" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github-alt"></i>waltzar</a>.</p>
+                        <p>This dev blog is available on a public GitHub repo: <a href="https://github.com/miyukiconnelly/waltzar" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github-alt"></i>waltzar</a>.</p>
                     </li>
                     <li>
                         <p>If you find this dev blog helpful to your work or study, please share it to your friends or colleagues and give me love and support by patronizing me on <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-patreon"></i>Patreon</a> or following me on <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i>Twitter</a>, <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i>TikTok</a>, and <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i>Instagram</a>.</p>
@@ -132,7 +132,7 @@
         <section class="footer">
             <div class="footer-container">
                 <h3 class="footer-title">Waltzar</h3>
-                <p>Developed by <a href="https://github.com/miyukiconnelly" target="_blank" rel="noopener noreferrer" class="footer-site-creator">Miyuki Connelly</a></p>
+                <p>Developed by <a href="https://github.com/miyukiconnelly" target="_blank" rel="noopener noreferrer" class="footer-site-creator">Miyuki Connelly (U)</a></p>
             </div>
         </section>
 
