add roadmap section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h3>A Comprehensive Guide to Modern Full Stack Web Development 2024</h3>
             </div>
 
-            <p>A developer's wiki blog on the latest and fundamental web development technologies curated by <a href="">Miyuki Connelly (U)</a>, an experienced self-taught web developer based in New York, the United States.</p>
+            <p>A developer's wiki blog on the latest and fundamental web development technologies curated by <a href="">U (Miyuki Connelly)</a>, an experienced self-taught web developer based in New York, the United States.</p>
 
             <!-- <p>A comprehensive developer wiki on fundamental and the latest web technologies curated by a self-taught web developer for aspiring developers and those who want to stay up to date with the ever-changing web technologies.</p> -->
 
@@ -121,7 +121,7 @@
                         <p>This dev blog is available on a public GitHub repo: <a href="https://github.com/miyukiconnelly/waltzar" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github-alt"></i>waltzar</a>.</p>
                     </li>
                     <li>
-                        <p>If you find this dev blog helpful to your work or study, please share it to your friends or colleagues and give me love and support by patronizing me on <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-patreon"></i>Patreon</a> or following me on <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i>Twitter</a>, <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i>TikTok</a>, and <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i>Instagram</a>.</p>
+                        <p>If you find this dev blog helpful to your work or study, please share it to your friends or colleagues and give me love and support by patronizing me on <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-patreon"></i>Patreon</a> or following me on <a href="https://twitter.com/miyukiconnelly" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i>Twitter</a>, <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i>TikTok</a>, and <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i>Instagram</a>.</p>
                     </li>
                 </ul>
 
@@ -129,10 +129,67 @@
              
         </section>
 
+        <div class="panorama-roadmap">
+            <section class="intro small">
+                <div class="intro-header">
+                    <h2 class="intro-title">
+                        <span class="fragment-1">Waltzar</span>
+                        <span class="fragment-2">Roadmap</span>
+                    </h2>
+                    <h3>Web Technologies</h3>
+                </div>
+                <div class="roadmaps">
+                    <!-- <div class="roadmap-item">
+                        <h4 class="roadmap-item--title">Front End</h4>
+                        <ul class="roadmap-item--list">
+                            <li><a href="">HTML</a></li>
+                            <li><a href="">CSS</a></li>
+                            <li><a href="">JavaScript</a></li>
+                            <li><a href="">React</a></li>
+                        </ul>
+                    </div>
+                    <div class="roadmap-item">
+                        <h4 class="roadmap-item--title">Back End</h4>
+                        <ul class="roadmap-item--list">
+                            <li><a href="">MySQL</a></li>
+                        </ul>
+                    </div> -->
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">HTML</div>
+                    </a>
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">CSS</div>
+                    </a>
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">Bootstrap</div>
+                    </a>
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">JavaScript</div>
+                    </a>
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">Node.js</div>
+                    </a>
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">Git & GitHub</div>
+                    </a>
+                    <a class="roadmap-item-link" href="">
+                        <div class="roadmap-item">React</div>
+                    </a>
+                    
+                    <!-- <div class="roadmap-item">CSS</div>
+                    <div class="roadmap-item">Bootstrap</div>
+                    <div class="roadmap-item">JavaScript</div>
+                    <div class="roadmap-item">Node.js</div>
+                    <div class="roadmap-item">Git & GitHub</div>
+                    <div class="roadmap-item">React</div> -->
+                </div>
+            </section>
+        </div>
+
         <section class="footer">
             <div class="footer-container">
                 <h3 class="footer-title">Waltzar</h3>
-                <p>Developed by <a href="https://github.com/miyukiconnelly" target="_blank" rel="noopener noreferrer" class="footer-site-creator">Miyuki Connelly (U)</a></p>
+                <p>Developed by <a href="https://github.com/miyukiconnelly" target="_blank" rel="noopener noreferrer" class="footer-site-creator">U (Miyuki Connelly)</a></p>
             </div>
         </section>
 
